# identifiers

./: .gitignore  Identifiers.cabal  LICENSE  README.md  identifiers.cabal
bench/: BenchAll.hs  Identifiers.hs  IdentifiersHashable.hs  IdentifiersListLike.hs
src/Data/: Identifiers.hs  TrieMap.hs
src/Data/Identifiers/: Hashable.hs  ListLike.hs
src/Data/Text/: Identifiers.hs
test/: TestAll.hs
