name:                identifiers
version:             0.1.0.0
synopsis:            Numeric identifiers for text values.
description:         Useful for situations where repeated-storage requirements
                     of text values become too costly.
license:             BSD3
license-file:        LICENSE
author:              Adam Wagner
maintainer:          awagner83@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Text.Identifiers
  build-depends:       base >=4.6 && <4.7,
                       binary ==0.7.*,
                       containers ==0.5.*,
                       text ==0.11.*,
                       text-binary ==0.1.0,
                       unordered-containers ==0.2.3.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

benchmark bench-builder-all
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             BenchAll.hs
  build-depends:       base >=4.6 && <4.7,
                       criterion,
                       identifiers,
                       text ==0.11.*
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

